--- a/templates/rooms/home.html
+++ b/templates/rooms/home.html
@@ -10,5 +10,12 @@
   <h2>{{room.name}} / ${{room.price}}</h2>
   {% endfor %}
 
+  
+   <h5> Page {{page}} of {{page_count}}</h5>
+
+    {% for page in page_range %}
+      <a href="?page={{page}}" >{{page}}</a>
+    {% endfor %}
+
 {% endblock content %}
 
