--- a/templates/rooms/home.html
+++ b/templates/rooms/home.html
@@ -6,18 +6,18 @@
 
 {% block content %}
 
-  {% for room in rooms %}
+  {% for room in page.object_list %}
   <h2>{{room.name}} / ${{room.price}}</h2>
   {% endfor %}
 
   
    <h5> 
-   {% if page is not 1 %}
-      <a href="?page={{page|add:"-1"}}" >Previous</a>
+   {% if page.has_previous %}
+      <a href="?page={{page.number|add:"-1"}}" >Previous</a>
    {% endif %}
-   Page {{page}} of {{page_count}}
-   {% if not page == page_count %}
-      <a href="?page={{page|add:"1"}}" >Next</a>
+   Page {{page.number}} of {{page.paginator.num_pages}}
+   {% if page.has_next %}
+      <a href="?page={{page.number|add:"1"}}" >Next</a>
    {% endif %}
 
    </h5>
