--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-  {% for room in object_list %}
+  {% for room in rooms %}
   <h2>{{room.name}} / ${{room.price}}</h2>
   {% endfor %}
 
