--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -5,9 +5,14 @@
 {% endblock page_name %}
 
 {% block content %}
+   {{now}}
 
   {% for room in rooms %}
-  <h2>{{room.name}} / ${{room.price}}</h2>
+  <h2>
+  <a href="{% url "rooms:detail" room.pk %}"> 
+  {% comment %} <a href="/rooms/{{room.pk}}"> {% endcomment %}
+  {{room.name}} / ${{room.price}}</a>
+  </h2>
   {% endfor %}
 
   
